--- a/src/instructor/mycorses/mycorses.css
+++ b/src/instructor/mycorses/mycorses.css
@@ -2,6 +2,9 @@
     --maincolor:rgb(75, 121, 207) ;
     --mainwhit:white;
 }
+.card a{
+  color:var(--maincolor);
+}
 .mycorses .middels .card{
     display: flex;
     justify-content: space-between;
@@ -58,6 +61,43 @@ margin-right: 10px;
     width: 50px;
     height: 50px;
 }
+
+
+.menu {
+    position: absolute;
+    top: 40px;
+    right: 20px;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+  }
+  
+  .menu p {
+    margin: 0;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .menu .update{
+    color: #4CAF50 !important;
+  }
+  .menu .delete{
+    color: #f44336!important;
+  }
+  .menu .view{
+    color: #2196F3!important;
+  }
+  .menu .quiz{
+    color: #f700ff!important;
+  }
+  .menu p:hover {
+    background: #f5f5f5;
+    color: #000;
+  }
+  
 @media (max-width: 768px) {
     .serice {
         margin-left: auto;
