--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -151,7 +151,13 @@ flex-direction: column;
     color:black;
     background-color:#f3c11d;
 }
-
+.deleteacc{
+    background-color: #ff0000;
+    color:white;
+    width:50%;
+    text-align: center;
+    border-radius:10px
+}
 @media (max-width:768px) { 
     .sidebar{
      transform: translateX(-100%);
@@ -163,7 +169,7 @@ flex-direction: column;
     transition-duration: 0.5s;
     z-index: 10000;
     background-color:white;
-    width: 30%;
+    width: 50%;
     margin-top: 10%;
     margin-bottom: 10%;
  }
