--- a/src/student/Profile/profile.css
+++ b/src/student/Profile/profile.css
@@ -1,364 +1,563 @@
-:root{
-    --maincolor:rgb(75, 121, 207) ;
-    --mainwhit:white;
+:root {
+    --maincolor: rgb(75, 121, 207);
+    --mainwhit: white;
 }
-.profilee{
-    padding:90px 20px;
+
+.profilee {
+    padding: 90px 20px;
     height: 100%;
-    
+
 }
-.profileacount{
+
+.profileacount {
     font-size: 50px;
 }
-.profilee .LEMA{
+
+.profilee .LEMA {
     font-size: 15px;
-    color:rgba(102, 102, 102, 0.49);
+    color: rgba(102, 102, 102, 0.49);
     font-weight: bold;
 }
-.profilee .pros .left{
+
+.profilee .pros .left {
     width: 30%;
     height: 100%;
 }
-.profilee .pros .left .card{
-    height:100%;
+
+
+.profilee .pros .left .card {
+    height: 100%;
     box-shadow: 0 10px 25px 0 rgba(50, 50, 93, .07), 0 5px 15px 0 rgba(0, 0, 0, .07);
     display: flex;
     flex-direction: column;
     text-align: left;
-    width:100%;
-    margin-top:20px;
-    border-radius:2px;
-    border:none;    
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 2px;
+    border: none;
     text-align: center;
-    padding:10px 0;
+    padding: 10px 0;
 }
-.informa img{
+
+.informa img {
     width: 100px;
-    height:100px;
-    border-radius:50%;
+    height: 100px;
+    border-radius: 50%;
     margin-bottom: 10px;
+    cursor: pointer;
+    object-fit: cover;
 }
-.informa .ander{
-    color:rgba(128, 128, 128, 0.738);
+
+.datauser {
+    font-size: 20px;
+    text-align: left;
+    margin-left: 10px;
+    padding: 10px;
+    text-transform: capitalize;
+    padding-right: 10px;
 }
-.informa .icos{
+
+.informa .ander,
+.informa .country {
+    color: rgba(128, 128, 128, 0.738);
     display: flex;
-    justify-content:center;
+    align-items: center;
+}
+
+.informa .ander span,
+.informa .country span {
+    color: rgba(0, 0, 0, 0.738);
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: capitalize;
+}
+
+.informa .icos {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-direction: column;
+    font-size: 25px;
+    gap: 20px;
+}
+.informa .icos a{
+    text-decoration: none;
+    display: flex;
+    justify-content: space-around;
     align-items:center;
 }
-.informa .icos span{
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    color: white;
-    font-size: 30px;
-    border-radius:50%;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    margin:10px;
+.social-link{
+    font-size: 10px;
 }
-.informa .icos .f{
-background-color:blue;
+.informa .icos .f {
+color: blue;
 }
-.informa .icos .t{
-   background-color: rgb(14, 137, 231);
 
-}.informa .icos .i{
-background-color:rgb(244, 12, 143);
+.informa .icos .t {
+color:rgb(0, 168, 240);
+
 }
-.achive,.skills{
+
+.informa .icos .i {
+color:rgb(235, 5, 105)
+}
+
+.informa .icos .g {
+ color:black;
+}
+
+.informa .icos .l {
+color: rgb(0, 59, 141);
+}
+
+.achive, .skills {
     text-align: center;
     text-transform: capitalize;
     font-size: 25px;
-    background-color:rgba(128, 128, 128, 0.121);
-    padding:5px 0;
-    color:gray;
+    background-color: rgba(128, 128, 128, 0.121);
+    padding: 5px 0;
+    color: gray;
 }
-.colors{
+
+.colors {
     display: flex;
-    justify-content:space-around;
-    align-items:center;
-    color:white;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
     margin: 10px 0;
 }
-.one,.two,.three,.four,.five{
+
+.one, .two, .three, .four, .five {
     text-align: center;
     color: white;
     font-size: 30px;
-    border-radius:50%;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
-    padding:2px;
-}
-.colors .one{
-background-color:yellow;
-}
-.colors .two{
-    background-color:rgb(5, 208, 5)
-}
-.colors .three{
-    background-color:red;
-}
-.colors .four{
-    background-color:blue
-}
-.colors .five{
-    background-color:rgb(144, 0, 255)
-}
-.colors .oneb{
-    width: 100px;
-    height:auto;
-    background-color:black;
-    color:white;
-    border-radius:5px;
-   position: absolute;
-   top: 55%;
-   left: -7%;
-   display: none;
-}
-.colors .twob{
-    width: 100px;
-    height:auto;
-    background-color:black;
-    color:white;
-    border-radius:5px;
-   position: absolute;
-   top: 55%;
-   left: 10%;
-   display: none;
-}
-.colors .threeb{
-    width: 100px;
-    height:auto;
-    background-color:black;
-    color:white;
-    border-radius:5px;
-   position: absolute;
-   top: 55%;
-   left: 36%;
-   display: none;
-}
-.colors .fourb{
-    width: 100px;
-    height:auto;
-    background-color:black;
-    color:white;
-    border-radius:5px;
-   position: absolute;
-   top: 55%;
-   left: 54%;
-   display: none;
-}
-.colors .fiveb{
-    width: 100px;
-    height:auto;
-    background-color:black;
-    color:white;
-    border-radius:5px;
-   position: absolute;
-   top: 55%;
-   left: -7%;
-   display: none;
-}
-    .colors .two{
-        background-color:rgb(5, 208, 5)
-    }
-    .colors .three{
-        background-color:red;
-    }
-    .colors .four{
-        background-color:blue
-    }
-    .colors .five{
-        background-color:rgb(144, 0, 255)
-    }
-.jsp,.nop,.vaup,.anagelrp{
-width: 40px !important;
-height:40px !important;
+    padding: 2px;
 }
 
-.blokpr{
+.colors .one {
+    background-color: yellow;
+}
+
+.colors .two {
+    background-color: rgb(5, 208, 5)
+}
+
+.colors .three {
+    background-color: red;
+}
+
+.colors .four {
+    background-color: blue
+}
+
+.colors .five {
+    background-color: rgb(144, 0, 255)
+}
+
+.colors .oneb {
+    width: 100px;
+    height: auto;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 55%;
+    left: -7%;
+    display: none;
+}
+
+.colors .twob {
+    width: 100px;
+    height: auto;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 55%;
+    left: 10%;
+    display: none;
+}
+
+.colors .threeb {
+    width: 100px;
+    height: auto;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 55%;
+    left: 36%;
+    display: none;
+}
+
+.colors .fourb {
+    width: 100px;
+    height: auto;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 55%;
+    left: 54%;
+    display: none;
+}
+
+.colors .fiveb {
+    width: 100px;
+    height: auto;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 55%;
+    left: -7%;
+    display: none;
+}
+
+.colors .two {
+    background-color: rgb(5, 208, 5)
+}
+
+.colors .three {
+    background-color: red;
+}
+
+.colors .four {
+    background-color: blue
+}
+
+.colors .five {
+    background-color: rgb(144, 0, 255)
+}
+
+.jsp, .nop, .vaup, .anagelrp {
+    width: 40px !important;
+    height: 40px !important;
+}
+
+.blokpr {
     display: flex;
-    justify-content:space-around;
-    align-items:center;
+    justify-content: space-around;
+    align-items: center;
     width: 100% !important;
 }
-
-.pros{
+.pros {
     display: flex;
 }
-.profilee .pros .rightpro{
- width:70%;
+
+.profilee .pros .rightpro {
+    width: 70%;
     height: 100%;
     margin-top: 20px;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
-.profilee .pros .rightpro .toppro{
-   display: flex;
-   width: 100% ;
-   }
-   .profilee .pros .rightpro .toppro .card{
+
+.profilee .pros .rightpro .toppro {
+    display: flex;
+    width: 100%;
+}
+
+.profilee .pros .rightpro .toppro .card {
     margin: 0 10px;
-    padding:10px;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items:center;
-    width:600px;
+    align-items: center;
+    width: 600px;
     border: none;
-    background-color:white;
+    background-color: white;
     box-shadow: 0 10px 25px 0 rgba(50, 50, 93, .07), 0 5px 15px 0 rgba(0, 0, 0, .07);
-   }
-   .profilee .pros .rightpro .toppro .card .cardp{
-    font-size: 20px;
-    margin-left:5px ;
-    margin-bottom: 0;
-   }
-   .profilee .pros .rightpro .toppro .card .cardp:hover{
-    cursor: pointer;
-    color:black;
-    border-bottom:1px solid black;
-   }
-   .profilee .pros .rightpro .toppro .card .cardh2{
-    font-size: 30px;
-   }
+}
 
-   .profilee .pros .rightpro .toppro .card .clop{
+.profilee .pros .rightpro .toppro .card .cardp {
+    font-size: 20px;
+    margin-left: 5px;
+    margin-bottom: 0;
+}
+
+.profilee .pros .rightpro .toppro .card .cardp:hover {
+    cursor: pointer;
+    color: black;
+    border-bottom: 1px solid black;
+}
+
+.profilee .pros .rightpro .toppro .card .cardh2 {
+    font-size: 30px;
+}
+
+.profilee .pros .rightpro .toppro .card .clop {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center;
-   }
-    .meddilpro .card,
-    .bottompro .card{
-        margin: 10px;
-        padding: 18px;
-        display: flex;
-        justify-content: center;
-        flex-direction: row;
-        width: 97%;
-        border: none;
-        background-color: white;
-        box-shadow: 0 10px 25px 0 rgba(50, 50, 93, .07), 0 5px 15px 0 rgba(0, 0, 0, .07);
-   }
-    .meddilpro .card img,
-    .bottompro .card img{
+    align-items: center;
+}
+
+.meddilpro .card,
+.bottompro .card {
+    margin: 10px;
+    padding: 18px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 97%;
+    border: none;
+    background-color: white;
+    box-shadow: 0 10px 25px 0 rgba(50, 50, 93, .07), 0 5px 15px 0 rgba(0, 0, 0, .07);
+}
+
+.meddilpro .card img,
+.bottompro .card img {
     width: 40px;
     height: 40px;
-    border-radius:50%;
+    border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
-   }
-   .meddilpro .card .sherr
-   .bottompro .card .sherr{
+}
+
+.meddilpro .card .sherr .bottompro .card .sherr {
     font-size: 20px;
     font-weight: bold;
-    margin:2px 0;
-   }
-   .meddilpro .card .sherr span{
-    color:rgba(128, 128, 128, 0.4);
+    margin: 2px 0;
+}
+
+.meddilpro .card .sherr span {
+    color: rgba(128, 128, 128, 0.4);
     font-size: 15px;
-   }
-   .meddilpro .card  a
-   .bottompro .card a{
+}
+
+.meddilpro .card a .bottompro .card a {
     margin-bottom: 10px;
-   }
-.meddilpro .react
-.bottompro .react{
+}
+
+.meddilpro .react .bottompro .react {
     margin: 20px;
 }
-.like{
+
+.like {
     margin-right: 5px;
 }
-.love{
+
+.love {
     margin-left: 5px;
 }
-.lk{
+
+.lk {
     font-size: 20px;
-    color:rgb(40, 40, 226);
+    color: rgb(40, 40, 226);
     cursor: pointer;
 }
-.lo{
+
+.lo {
     font-size: 20px;
-    color:rgb(255, 0, 0);
+    color: rgb(255, 0, 0);
     cursor: pointer;
 }
-.bottompro .card{
-    padding-left:0 !important;
+
+.bottompro .card {
+    padding-left: 0 !important;
 
 }
-.bottompro .cardin{
+
+.bottompro .cardin {
     margin-right: 10px;
     margin-bottom: 10px;
-    padding:10px;
+    padding: 10px;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     text-align: left;
-    width:100%;
+    width: 100%;
     border: none;
-    background-color:white;
-    border-radius:5px;
+    background-color: white;
+    border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 10px 25px 0 rgba(50, 50, 93, .07), 0 5px 15px 0 rgba(0, 0, 0, .07);
 }
-.bottompro .cardin h2{
+
+.bottompro .cardin h2 {
     font-size: 20px;
 }
-.bottompro .cardin img{
+
+.bottompro .cardin img {
     width: 100%;
     height: 200px;
-    border-radius:0;
+    border-radius: 0;
     margin-bottom: 5px;
 }
-.bottompro .cardin .link{
-    color:black;
+
+.bottompro .cardin .link {
+    color: black;
     font-size: 25px;
 }
-.bottompro .react{
+
+.bottompro .react {
     margin-right: 10px;
 }
 
-@media(max-width:1200px){
 
-}
-@media(max-width:992px){
- .pros{
+.favorite-courses {
+    margin-top: 40px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .favorite-courses .section-title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  
+  .course-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
+  .course-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    width: calc(33.33% - 20px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  
+  .course-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .course-title {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #007bff;
+  }
+  
+  .course-author,
+  .course-description,
+  .course-price,
+  .course-status {
+    margin-bottom: 8px;
+    font-size: 14px;
+    color: #555;
+  }
+  
+  .course-status.active {
+    color: green;
+    font-weight: bold;
+  }
+  
+  .course-status.inactive {
+    color: red;
+    font-weight: bold;
+  }
+  
+  .no-courses {
+    font-size: 16px;
+    color: #888;
+  }
+  
+
+  /* Popup Style */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .popup-content {
+    position: relative;
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+  }
+  
+  .popup-image {
+    width:500px !important;
+    height:500px !important;
+  }
+  
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    background: red;
+    color: white;
+    border: none;
+    border-radius:50%;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .close-btn:hover {
+    background: darkred;
+  }
+  .contenet{
+    width: 100%;
+  }
+@media(max-width:1200px) {}
+
+@media(max-width:992px) {
+    .pros {
+        display: flex;
+        flex-direction: column;
+        width: 300%;
+        margin-left: 5%;
+    }
+.profilee{
     display: flex;
     flex-direction: column;
-    width:300%;
-    margin-left: 5%;
- }
- .profilee .pros .rightpro{
-    margin-left: -9px;
-    width: 31%;
- }
+    justify-content: center;
 }
-@media(max-width:768px){
-.pros{
-   width: 300%;
+    .profilee .pros .rightpro {
+        margin-left: -9px;
+        width: 31%;
+    }
+    .profilee .pros .rightpro .toppro {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+    .course-card{
+        min-width: 100%;
+    }
 }
+
+
+@media(max-width:768px) {
+    .pros {
+        width: 300%;
+    }
 }
-@media(max-width:576px){
+
+@media(max-width:576px) {
     .profilee .pros .left {
         width: 24%;
         height: 100%;
         margin-left: 3%;
     }
+
     .profilee .pros .rightpro {
         margin-left: 47px;
         width: 25%;
     }
 }
-
-
-
-
-
-
-
-
-
-
